<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.borrow.rejectionInformation.RejectionInformationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rejection_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/rejection_information"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/first_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:dividerColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rejection_information" />

    <TextView
        android:id="@+id/facility_loan_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/facility_loan_request"
        android:textColor="@color/neutral_200"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_divider" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_facility_loan_borrower_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facility_loan_request"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_facility_loan_borrower_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/borrower_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/civ_facility_loan_borrower_image"
        app:layout_constraintTop_toTopOf="@+id/civ_facility_loan_borrower_image" />

    <TextView
        android:id="@+id/tv_facility_loan_borrower_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/borrower_id"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/civ_facility_loan_borrower_image"
        app:layout_constraintStart_toEndOf="@+id/civ_facility_loan_borrower_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_facility_loan_borrower_name" />

    <TextView
        android:id="@id/tv_facility_loan_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/facility_loan_id"
        android:textColor="@color/neutral_300"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_facility_loan_borrower_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_facility_loan_borrower_name" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/second_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:dividerColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_facility_loan_borrower_id" />

    <TextView
        android:id="@+id/tv_rejected_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/reject_loan"
        android:textColor="@color/neutral_200"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_divider" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/iv_profile_admin"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rejected_by" />

    <TextView
        android:id="@+id/tv_admin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/admin_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/civ_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/civ_profile_picture" />

    <TextView
        android:id="@+id/tv_admin_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/borrower_id"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/civ_profile_picture"
        app:layout_constraintEnd_toStartOf="@+id/civ_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/tv_admin_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_rejection_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_admin_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_rejection_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rejection_reason"
            android:inputType="textMultiLine"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reject"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/reject"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_rejection_reason" />

</androidx.constraintlayout.widget.ConstraintLayout>