<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.roomManagement.addRoom.AddRoomActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_add_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:strokeColor="@color/transparent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_image" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_insert_room_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/insert_room_image"
        android:textColor="@color/neutral_200"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_add_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_facility_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_insert_room_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_facility_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facility_name"
            android:inputType="text"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_room_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_facility_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_room_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_location"
            android:inputType="text"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_room"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/add_room"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_room_location" />

</androidx.constraintlayout.widget.ConstraintLayout>