<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:strokeColor="@color/neutral_100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_new"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="15dp"
            android:src="@color/orange_400"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_item_icon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_item_borrowing_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/borrowing_status"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_item_icon"
            app:layout_constraintTop_toTopOf="@+id/img_item_icon" />

        <TextView
            android:id="@+id/tv_item_borrowing_status_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/borrowing_status_information"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_borrowing_status" />

        <TextView
            android:id="@+id/tv_item_notification_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/item_date"
            android:textColor="@color/neutral_200"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
